[issue 7] - Update TeamController
Endpoints Configuration

Closes #7